# auto_bioinformatics

./: .gitignore  .pre-commit-config.yaml  README.md  builder.py  pyproject.toml
.github/workflows/: pullrequest.yaml
src/: analysis.py  errors.py  imputers.py  main.py  plots.py  reducers.py  reporting.py  web.py
src/auto_bioinformatics/: analysis.py  errors.py  main.py  normalisers.py  plots.py  reducers.py  reporting.py  scalers.py
src/auto_bioinformatics/ui/: root.py
src/ui/: __init__.py  root.py
