[tool.poetry]
name = "stmball-python-package-template"
version = "0.1.0"
description = "Template for Python packages"
authors = ["Samuel Ball <me@stmball.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "stmball_python_package_template"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
