[tool.poetry]
name = "auto-bioinformatics"
version = "0.1.0"
description = "Template for Python packages"
authors = ["Samuel Ball <me@stmball.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "auto-bioinformatics"}]

[tool.poetry.dependencies]
python = "^3.9"
gseapy = "^1.1.1"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
pandas = "^2.1.4"
umap-learn = "^0.5.5"
adjusttext = "^1.0.4"
python-docx = "^1.1.0"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.3"
toml = "^0.10.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
