[project]
name = "auto-bioinformatics"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.2",
    "gseapy>=1.1.3",
    "tqdm>=4.66.5",
    "scikit-learn>=1.5.1",
    "adjusttext>=1.2.0",
    "python-docx>=1.1.2",
    "xlrd>=2.0.1",
    "openpyxl>=3.1.5",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/auto_bioinformatics"]
